public/css/broadcast/default/responsive.css
@media (max-width: 2500px) {
    .boxed .broadcast .spaceht {
        font-size: 170px !important;
    }
}

@media (min-width: 768px) and (max-width: 979px) {
  .ads {
    display: none;
  }
  .ads-mobile {
    display: block!important;
  }
  .processq .btn-cyan,
  .processq .btn-blue,
  .processq .btn-orange {
    margin-top: 10px;
  }
  .processq table .btn-cyan,
  .navbar-nav {
    margin: 0;
  }
    #fqCarousel {
        min-height: inherit!important;
        margin-bottom: 20px!important;
    }
}

@media (max-width: 991px) {
  .mobileme {
    display: none!important;
  }
}

@media (max-width: 767px) {
  .processq .btn-cyan,
  .processq .btn-blue,
  .processq .btn-orange {
    margin-top: 10px;
  }
  .processq table .btn-cyan,
  .processq table .btn-blue,
  .processq table .btn-orange {
    font-size: 11px;
  }
  .processq table .btn-cyan,
  .navbar-nav {
    margin: 0;
  }
  .navbar-default .navbar-collapse {
    border: none;
  }
  .ads {
    display: none;
  }
  .ads-mobile {
    display: block!important;
  }
  /*3 24 2015*/
  #biz-broadcast .footer {
    display: none!important;
  }
}

@media (max-width: 480px) {
    #fqCarousel {
        min-height: inherit!important;
        margin-bottom: 20px!important;
    }
  .navbar-brand {
    margin-left: 10px;
  }
  .ads {
    display: none;
  }
  .ads-mobile {
    display: block!important;
  }
  .filterwrap .btn {
    padding-left: 0;
  }
  .filters {
    margin-top: 0;
  }
  .filters .filterwrap {
    margin-bottom: 15px;
  }
  .subnav .nav span {
    display: block!important;
    margin-bottom: 3px;
  }
  .subnav .nav-tabs>li>a {
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: center;
  }
  .subnav .container {
    padding: 0;
  }
  .navbar-nav {
    margin: 0;
  }
  .processq #btn-call {
    margin-top: 15px;
  }
  .processq .dropdown-menu {
    width: 90%!important;
  }
  #moreq .nav-tabs>li.active>a:focus, 
  #moreq .nav-tabs>li>a:hover, 
  #moreq .nav-tabs>li.active>a, 
  #moreq .nav-tabs>li.active>a:hover {
    background-color: #ff8649;
    color: #fff;
  }
  .bcast-big .head h3 {
    font-size: 22px;
  }
  .bcast-big .terminal {
    font-size: 20px!important;
  }

  .inline-btns a {
    display: block;
    text-align: center;
  }
  /*rodels 352015*/
  #editbiz-tabs {
    padding-left: 0px;
    padding-right: 0px;
  }
  #bizbroadcast .mb20 {
    min-height: 122px;
  }
  #bizbroadcast .inline-btns p {
    height: 28px;
    margin: 4px 0px 4px 4px;
  }
  .head-wbtn small {
    width: 75%;
  }
  .pull-right.qrcode {
    float: none!important;
    text-align: center;
    margin: auto;
    margin-top: 20px;
  }
  .boxed .broadcast .numbers {
    font-size: 90px!important;
  }
  #broadcast .qrwrap {
    height: 250px!important;
  }
  .boxed .head {
      padding: 5px 20px;
  }
  /* @CSD 05042015 */
  .ads-sixnums h1 {
      font-size: 24vmin;
  }
  body#broadcast .terminal {
      font-size: 24px;
      line-height: 70px;
  }
  .ads-sixnums p.orange {
      font-size: 16px!important;
      padding-top: 0px!important;
  }
  #broadcast .head h4 {
      font-size: 30px;
  }
  .boxed .head.head-wbtn .btn-half {
      margin-top: -18px;
  }
  #btn-bcast-details {
      margin-top: -26px;
  }
}

